--- a/starwars/src/components/CharacterComponent/StarWars.css
+++ b/starwars/src/components/CharacterComponent/StarWars.css
@@ -8,6 +8,8 @@
   border-radius: 8px;
   -moz-border-radius: 8px;
   -webkit-border-radius: 8px;
+  font-size: 1.4rem;
+  font-family: Futura, sans-serif;
 }
 
 .character__profile:hover {
